# AD5697R

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
inc/: ad5697r.h  ad56x.h
src/: ad5697r.c  ad56x.c
template/: CMakeLists.txt  main.c
test/: test_ad56x.c
